--- a/Views/Dipendente/CalendarioPersonale.cshtml
+++ b/Views/Dipendente/CalendarioPersonale.cshtml
@@ -15,9 +15,9 @@
                 <input type="hidden" name="annoCorrente" value="@Model.AnnoProgrammazione" />
                 <input type="hidden" name="meseCorrente" value="@Model.MeseProgrammazione" />
                 <div class="month-selector">
-                    <button type="submit" name="direzione" value="precedente">Precedente</button>
+                    <button type="submit" name="direzione" value="precedente">←</button>
                     <span>@meseTestuale @annoCorrente</span>
-                    <button type="submit" name="direzione" value="successivo">Successivo</button>
+                    <button type="submit" name="direzione" value="successivo">→</button>
                 </div>
             </form>
         </div>
