--- a/Views/Dipendente/RichiestaAssenze.cshtml
+++ b/Views/Dipendente/RichiestaAssenze.cshtml
@@ -1,3 +1,4 @@
-<div>
-    richiesta assenze
+<link rel="stylesheet" href="~/css/gestionepermessipersonale.css">
+<div class="assenzedip">
+  Richieste assenze
 </div>
