--- a/wwwroot/css/gestioneassenze.css
+++ b/wwwroot/css/gestioneassenze.css
@@ -172,10 +172,28 @@
 .blue-button:hover {
   background-color: darkblue;
 }
+
 .dipnontrovato {
-  background-color: #f44336;
-  border: groove, pink, 2px;
+  background-color: #ebd4d4;
+  border: 2px solid #dd5b5b;
+  color: #a94442;
+  padding: 15px;
+  border-radius: 5px;
+  font-size: 16px;
+  font-weight: bold;
   text-align: center;
-  font-family:'Courier New', Courier, monospace;
-  font-size: 30px;
+  width: 50%; /* Imposta la larghezza al 50% */
+  margin: auto; /* Per centrare l'elemento orizzontalmente */
+}
+.benvenuto {
+  background-color: rgb(223, 213, 213);
+  border: 2px solid rgb(91, 202, 221);
+  color: rgb(0, 0, 0);
+  padding: 15px;
+  border-radius: 5px;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+  width: 50%; /* Imposta la larghezza al 50% */
+  margin: auto; /* Per centrare l'elemento orizzontalmente */
 }
