--- a/Views/Azienda/GestioneAssenze.cshtml
+++ b/Views/Azienda/GestioneAssenze.cshtml
@@ -133,12 +133,12 @@
 else if (Model != null && Model.DipendenteTrovato == false)
 {
     <div class="dipnontrovato">
-        dipendente nonn trovato
+        Errore dipendente nonn trovato
     </div>
 }
 else
 {
-    <div class='benvenuto'>
-        benvenuto nella sezione gestione assenza
+    <div class="benvenuto">
+        Benvenuto nella sezione gestione assenza
     </div>
 }
