--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,15 +1,19 @@
 
 @inject IHttpContextAccessor Accessor
 @if (@Accessor.HttpContext.Session.GetString("TipoUtente") == "azienda" ){
-    <div>
-        benevenuto azienda 
+    <link rel="stylesheet" href="~/css/home.css">
+        <div class="azienda">
+          Benvenuto nella sessione aziendale
     </div>
+     
 }
 else if(@Accessor.HttpContext.Session.GetString("TipoUtente") == "dipendente")
 {
-    <div>
-        benevenuto dipendnete 
+     <link rel="stylesheet" href="~/css/home.css">
+     <div class="azienda">
+           Benvenuto nella sessione dipendente
     </div>
+    
 }
 else{
     <link rel="stylesheet" href="~/css/home.css">
