--- a/wwwroot/css/elencolavoratori.css
+++ b/wwwroot/css/elencolavoratori.css
@@ -1,11 +1,10 @@
-
 table {
     background-color: white;
     width: 100%;
     border-collapse: collapse;
     border: 1px solid #ccc;
     border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+   
 }
 th, td {
     padding: 12px;
@@ -19,7 +18,7 @@ th {
 }
 
 tr:hover {
-    background-color: rgb(133, 221, 224);
+    background-color: rgba(171, 214, 216, 0.705);
 }
 .search-container {
     display: flex;
@@ -35,7 +34,7 @@ tr:hover {
     margin-right: 10px;
 }
 #search-button {
-    background-color: #000000;
+    background-color: rgba(0, 0, 0, 0.774); /* Trasparente */
     border: none;
     color: #fff;
     padding: 10px 20px;
@@ -44,26 +43,14 @@ tr:hover {
     font-size: 16px;
 }
 #search-button:hover {
-    background-color: #ffffff;
+    background-color: rgba(255, 255, 255, 0.5); /* Sfondo bianco con opacità 50% */
     color: black;
 }
 .pagination {
     margin-top: 20px;
     text-align: center;
 }
-.pagination a {
-    color: #ffffff;
-    padding: 8px 16px;
-    text-decoration: none;
-    border: 1px solid  rgb(133, 221, 224);
-    border-radius: 4px;
-    background-color: #000000;
-}
-.pagination a:hover {
-    background-color: rgb(133, 221, 224);
-    color: rgb(0, 0, 0);
-    border-color: #000000;
-}
+
 .modal {
     display: none;
     position: fixed;
@@ -73,7 +60,8 @@ tr:hover {
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgba(0, 0, 0, 0.959)
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
 }
 
 .modal-content {
@@ -101,7 +89,6 @@ tr:hover {
 
 .modal-content input[type=text],
 .modal-content input[type=email],
-.modal-content input[type=tel],
 .modal-content textarea {
     width: 100%;
     padding: 8px;
@@ -120,4 +107,10 @@ tr:hover {
 
 .modal-content button:hover {
     background-color: rgb(133, 221, 224);
+}
+.dipnontrovato {
+    color: aqua;
+}
+.benvenuto {
+    color: #000000;
 }
