--- a/Views/Azienda/CalendarioLavoratori.cshtml
+++ b/Views/Azienda/CalendarioLavoratori.cshtml
@@ -24,6 +24,7 @@
         <div class="calendar-container">
 
             <div class="nav-month">
+                <div>Nome dipendente: @Model.Nome</div>
                 <form class="form-month" asp-action="CalendarioLavoratori" method="post">
                     <input type="hidden" name="nome" value="@Model.Nome" />
                     <input type="hidden" name="annoCorrente" value="@Model.AnnoProgrammazione" />
@@ -120,7 +121,26 @@
                     <div class="day empty"></div>
                 }
             </div>
+            <div class="leggenda">
+                <label>Regolare</label>
+                <div class="quadrato regolare"></div>
+                <label>Timbratura irregolare</label>
+                <div class="quadrato irregolare"></div>
+                <label>Malattia</label>
+                <div class="quadrato malattia"></div>
+                <label>Permesso</label>
+                <div class="quadrato permesso"></div>
+                <label>Ferie</label>
+                <div class="quadrato ferie"></div>
+            </div>
+            <div>
+                <form asp-action="GestioneAssenze" method="post">
+                    <button type="submit" class="btn-assenze search-btn">Sezione Gestione Assenze</button>
+                    <input type="hidden" name="nome" value="@Model.Nome" />
+                </form>
+            </div>
         </div>
+
         /*modale che gestisce la programmazione del giorno cliccato*/
         <div id="programmazioneModal" class="modal">
             <div class="modal-content">
