--- a/wwwroot/css/elencolavoratori.css
+++ b/wwwroot/css/elencolavoratori.css
@@ -121,3 +121,7 @@ tr:hover {
 .modal-content button:hover {
     background-color: rgb(133, 221, 224);
 }
+.container-azioni{
+    display: flex;
+    gap: 8px;
+}
