--- a/wwwroot/css/calendariolavoratori.css
+++ b/wwwroot/css/calendariolavoratori.css
@@ -29,6 +29,7 @@
     border-radius: 5px;
     cursor: pointer;
     font-size: 16px;
+    
     transition: background-color 0.3s, color 0.3s;
     /* Effetto di transizione per il cambio di colore */
 }
@@ -191,6 +192,8 @@
 
 .modal {
     display: none;
+    justify-content: center;
+    align-items: center;
     /* Nascosta di default */
     position: fixed;
     z-index: 1;
@@ -204,13 +207,77 @@
 }
 
 /* Stile per il contenuto della Modal */
+/* General Modal Styles */
 .modal-content {
-    background-color: #fefefe;
-    margin: 15% auto;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    margin: auto;
+    max-width: 500px;
     padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
+    width: 90%;
 }
+
+/* Modal Title */
+.modal-title {
+    border-bottom: 1px solid #eee;
+    font-size: 1.5em;
+    margin-bottom: 20px;
+    padding-bottom: 10px;
+    text-align: center;
+}
+
+/* Form Labels */
+.label {
+    color: #333;
+    display: block;
+    font-weight: bold;
+    margin-bottom: 5px;
+    margin-top: 15px;
+    margin-right: 10px;
+    width: 40%;
+}
+
+/* Form Inputs */
+.input-time,
+.input-checkbox {
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;
+    display: block;
+    font-size: 1em;
+    margin-bottom: 15px;
+    padding: 10px;
+    width: 100%;
+}
+
+.input-checkbox {
+    margin: 0;
+    width: 20px;
+}
+
+/* Submit Button */
+.submit-btn {
+    background-color: #007bff;
+    border: none;
+    border-radius: 5px;
+    color: #fff;
+    cursor: pointer;
+    font-size: 1em;
+    padding: 10px 20px;
+    text-align: center;
+    width: 100%;
+    transition: background-color 0.3s ease;
+}
+
+.submit-btn:hover {
+    background-color: #0056b3;
+}
+
+.container-checkbox {
+    display: flex;
+}
+
 
 /* Stile per il bottone di chiusura */
 .close {
@@ -226,6 +293,10 @@
     text-decoration: none;
     cursor: pointer;
 }
-.btn-assenze{
+
+.btn-assenze {
     margin-top: 8px;
+}
+.programmazione-form .search-btn{
+    width: 100%;
 }
